fix premature response